source/carehub/main/default/objects/MedicalPolicy__c/fields/ContactId__c.field-meta.xml
<CustomField>
    <fullName>ContactId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact Name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Medical Policies</relationshipLabel>
    <relationshipName>MedicalPolicies</relationshipName>
    <type>Lookup</type>
</CustomField>