source/carehub/main/default/objects/MedicalPolicy__c/fields/MostRecent__c.field-meta.xml
<CustomField>
    <fullName>MostRecent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Most Recent</label>
    <type>Checkbox</type>
</CustomField>