source/carehub/main/default/objects/MedicalPolicy__c/fields/ResuscitationDecision__c.field-meta.xml
<CustomField>
    <fullName>ResuscitationDecision__c</fullName>
    <label>Resuscitation Decision</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Unknown Resuscitation Decision</fullName>
                <default>true</default>
                <label>Unknown Resuscitation Decision</label>
            </value>
            <value>
                <fullName>Resuscitate</fullName>
            </value>
            <value>
                <fullName>Do Not Resuscitate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>